# FastUI

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  build-docs.sh  bump_npm.py  gen_schema.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  typedoc.json  uprev_npm_packages.py
.github/: docs-update.yml
.github/workflows/: ci.yml  docs-update.yml
demo/: .eslintrc.cjs  README.md  __init__.py  auth.py  auth_user.py  charts.py  components_list.py  db.py  forms.py  main.py  ollama.py  package-lock.json  package.json  pyproject.toml  server.py  shared.py  sse.py  tables.py  tests.py  tsconfig.json  vite.config.ts
demo/server/: main.py
demo/server/components/: __init__.py  events.py  extra.py  table.py
demo/src/: App.tsx  __init__.py  auth.py  auth_user.py  components_list.py  forms.py  main.scss  main.tsx  shared.py  sse.py  tables.py
demo/src/FastUI/: ClassName.ts  DefaultErrorDisplay.tsx  DefaultLoading.tsx  components.tsx  controller.tsx  errorContext.tsx  index.tsx  locationContext.tsx
demo/src/FastUI/components/: FormField.tsx  Json.tsx  button.tsx  display.tsx  div.tsx  heading.tsx  index.tsx  link.tsx  modal.css  modal.tsx  table.tsx  text.tsx
demo/src/FastUI/hooks/: className.ts  customRender.ts  error.tsx  event.ts  locationContext.tsx
demo/tests/: test_demo.py
docs/: components.md  index.md  plugins.py
docs/api/: python_components.md  typescript_components.md
docs/extra/: tweaks.css
frontend/fastui/components/: link.tsx
frontend/fastui/hooks/: className.ts  error.tsx  event.ts  locationContext.tsx
python/demo/: README.md  __init__.py  cities.json  components_list.py  forms.py  main.py  shared.py  tables.py
python/fastui/: __init__.py  dev.py  display.py  enums.py  events.py  form_extract.py  forms.py  json_schema.py
python/fastui/components/: DfViewer.py  __init__.py  display.py  events.py  extra.py  forms.py  table.py  tables.py
python/requirements/: all.txt  lint.in  lint.txt  pyproject.txt  render.txt
react/fastui/: JsonSchema.ts  controller.tsx  index.tsx  tools.ts
react/fastui/components/: FormField.tsx  button.tsx  display.tsx  form.tsx  index.tsx  modal.tsx  table.tsx
react/fastui/hooks/: customRender.ts  dev.tsx  locationContext.tsx
requirements/: docs.in  docs.txt
sample/: __init__.py  main.py
src/UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/npm-fastui/: README.md  package.json  typedoc.json
src/npm-fastui-bootstrap/: README.md  package.json  tsconfig.json
src/npm-fastui-bootstrap/src/: DarkMode.tsx  footer.tsx  index.tsx  modal.tsx  navbar.tsx  pagination.tsx  toast.tsx
src/npm-fastui-prebuilt/: LICENSE  README.md  index.html  package.json  typedoc.json  vite.config.ts
src/npm-fastui-prebuilt/src/: App.tsx  main.scss  main.tsx
src/npm-fastui/src/: Defaults.tsx  controller.tsx  dev.tsx  events.ts  index.tsx  models.d.ts  models.ts  tools.ts
src/npm-fastui/src/components/: Code.tsx  CodeLazy.tsx  Custom.tsx  DarkMode.tsx  FireEvent.tsx  FormField.tsx  FormattedText.tsx  Iframe.tsx  Json.tsx  LineChart.tsx  LinkList.tsx  Markdown.tsx  MarkdownLazy.tsx  MediaRecorder.tsx  PageTitle.tsx  ServerLoad.tsx  authorization.tsx  button.tsx  details.tsx  display.tsx  div.tsx  error.tsx  footer.tsx  form.tsx  heading.tsx  image.tsx  index.tsx  link.tsx  modal.tsx  navbar.tsx  pagination.tsx  paragraph.tsx  redirect.tsx  spinner.tsx  table.tsx  text.tsx  toast.tsx  video.tsx
src/npm-fastui/src/hooks/: className.ts  config.ts  error.tsx
src/python-fastui/: README.md  pyproject.toml
src/python-fastui/fastui/: __init__.py  __main__.py  base.py  class_name.py  custom1.py  custom2.py  dev.py  events.py  forms.py  generate_typescript.py  json_schema.py  types.py
src/python-fastui/fastui/auth/: __init__.py  github.py  google.py  shared.py
src/python-fastui/fastui/components/: __init__.py  any_component.py  basic.py  charts.py  containers.py  display.py  forms.py  tables.py
src/python-fastui/requirements/: all.txt  lint.txt  pyproject.txt  render.txt  test.in  test.txt
src/python-fastui/tests/: react-fastui-json-schema.json  react-fastui-json-schema.sh  test_auth_github.py  test_auth_google.py  test_auth_shared.py  test_components.py  test_dev.py  test_forms.py  test_json_schema.py  test_json_schema_match.py  test_prebuilt_html.py  test_tables.py  test_tables_display.py
