[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "fastui/__init__.py"

[project]
name = "fastui"
description = "Build better UIs faster."
authors = [{ name = "Samuel Colvin", email = "s@muelcolvin.com" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Internet",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Framework :: Pydantic :: 2",
    "Framework :: FastAPI",
]
requires-python = ">=3.8"
dependencies = ["pydantic[email]>=2.5.2"]
dynamic = ["version"]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.104",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/pydantic/FastUI"

[project.scripts]
fastui = "fastui.__main__:cli"
