[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "fastui"
description = "Build better UIs faster."
authors = [{ name = "Samuel Colvin", email = "s@muelcolvin.com" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Internet",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",

    "Framework :: FastAPI",
]
requires-python = ">=3.8"
dependencies = ["pydantic>=2.6.0"]
version = "0.5.2"

[project.urls]
Homepage = "https://github.com/pydantic/FastUI"

[project.optional-dependencies]
fastapi = ["fastapi>=0.104", "python-multipart>=0.0.6"]

[tool.hatch.version]
path = "fastui/__init__.py"

[tool.scripts]
fastui = "fastui.__main__:cli"


[tool.pdm]
distribution = false


[tool.ruff]
line-length = 120
target-version = 'py38'
lint.extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'D', 'T']
lint.extend-ignore = [
    'D100',
    'D101',
    'D102',
    'D103',
    'D104',
    'D105',
    'D107',
    'D205',
    'D415',
]
lint.flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
lint.isort = { known-first-party = ['pydantic', 'tests'] }
lint.mccabe = { max-complexity = 14 }
lint.pydocstyle = { convention = 'google' }

[tool.ruff.lint.per-file-ignores]
'docs/*' = ['D']
'pydantic/__init__.py' = ['F405', 'F403', 'D']
'tests/test_forward_ref.py' = ['F821']
'tests/*' = ['D']
'pydantic/deprecated/*' = ['D']
'pydantic/json_schema.py' = ['D']

[tool.ruff.lint.extend-per-file-ignores]
"docs/**/*.py" = ['T']
"tests/**/*.py" = ['T', 'E721', 'F811']
"tests/benchmarks/test_fastapi_startup_generics.py" = ['UP006', 'UP007']
"tests/benchmarks/test_fastapi_startup_simple.py" = ['UP006', 'UP007']

[tool.ruff.format]
quote-style = 'single'

[tool.coverage.run]
source = ["fastui"]
omit = ["fastui/__main__.py", "fastui/generate_typescript.py"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
    '@overload',
    '@typing.overload',
    '\(Protocol\):$',
]

[tool.rye]
managed = true
dev-dependencies = [
    "playwright>=1.43.0",
    "rich==13.7.0",
    "pytest-pretty==1.2.0",
    "pytest-asyncio==0.23.4",
    "anyio==4.2.0",
    "coverage==7.4.1",
    "dirty-equals==0.7.1.post0",
    "markdown-it-py==3.0.0",
    "pytest==7.4.4",
    "pyright==1.1.335",
    "httpx==0.26.0",
    "fastapi>=0.110.2",
    "pyjwt>=2.8.0",
    "ruff==0.2.1",
    "mypy~=1.1.1",
]
